RESOLVED FIXED141348
Have SQLiteStatement::database() return a reference
https://bugs.webkit.org/show_bug.cgi?id=141348
Summary Have SQLiteStatement::database() return a reference
Chris Dumez
Reported 2015-02-06 17:02:07 PST
Have SQLiteStatement::database() return a reference
Attachments
Patch (5.34 KB, patch)
2015-02-06 17:03 PST, Chris Dumez
kling: review+
Chris Dumez
Comment 1 2015-02-06 17:03:27 PST
WebKit Commit Bot
Comment 2 2015-02-06 17:05:32 PST
Attachment 246193 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3 2015-02-06 17:45:23 PST
Comment on attachment 246193 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=246193&action=review okay! > Source/WebCore/ChangeLog:8 > + No new tests (OOPS!). OOPS!
Chris Dumez
Comment 4 2015-02-06 19:07:04 PST
Note You need to log in before you can comment on or make changes to this bug.