Have SQLiteStatement::database() return a reference https://bugs.webkit.org/show_bug.cgi?id=141348

Reviewed by Andreas Kling.

Have SQLiteStatement::database() return a reference as it can never
return null.

Source/WebCore:

* loader/icon/IconDatabase.cpp:
(WebCore::readySQLiteStatement):
* platform/sql/SQLiteStatement.h:
(WebCore::SQLiteStatement::database):

Source/WebKit2:

* DatabaseProcess/IndexedDB/sqlite/SQLiteIDBCursor.cpp:
(WebKit::SQLiteIDBCursor::internalAdvanceOnce):

Canonical link: https://commits.webkit.org/159381@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179774 268f45cc-cd09-0410-ab3c-d52691b4dbfc